force-app/main/default/objects/FIFA_Player__c/fields/FIFA_Goals__c.field-meta.xml
<CustomField>
    <fullName>FIFA_Goals__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Goals</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>