force-app/main/default/objects/FIFA_Player__c/fields/FIFA_Matches_Played__c.field-meta.xml
<CustomField>
    <fullName>FIFA_Matches_Played__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total number of matches played by a player</description>
    <label>Matches Played</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>