force-app/main/default/objects/FIFA_Player__c/fields/FIFA_Player_Win_Percentage__c.field-meta.xml
<CustomField>
    <fullName>FIFA_Player_Win_Percentage__c</fullName>
    <description>Win Percentage of a player</description>
    <formula>FIFA_Wins__c / FIFA_Matches_Played__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Win Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>