force-app/main/default/objects/FIFA_Player__c/fields/FIFA_Wins__c.field-meta.xml
<CustomField>
    <fullName>FIFA_Wins__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Wins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>