force-app/main/default/objects/FIFA_Player__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FIFA_Matches_Played__c</columns>
    <columns>FIFA_Player_Win_Percentage__c</columns>
    <columns>FIFA_Goals__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>